# sf-auth

./: Cargo.toml  Dockerfile  LICENSE  README.md  nohup.out
src/: config.rs  db.rs  main.rs  password.rs  types.rs
src/routes/: admin.rs  auth.rs  mod.rs
static/: styles.css
templates/: admin.html  auth.html
