[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["headers"] }
base64 = "0.21.4"
bson = "2.7.0"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
mongodb = "2.6.1"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
