[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
argon2 = "0.5.2"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
base64 = "0.21.4"
bson = "2.7.0"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
mongodb = "2.6.1"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
